vlib/v/checker/tests/main_and_script_err.vv
fn main() {
	println('main')
}
println('out')
